--- a/frontend/src/components/navigation/navigation.module.css
+++ b/frontend/src/components/navigation/navigation.module.css
@@ -2,5 +2,66 @@
   width: 100%;
   height: auto;
   padding: 30px 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 5;
+}
+
+.navigationWrapper .navigationInner {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.navigationWrapper .navigationLogo {
+  width: 48px;
+  height: 48px;
+  position: relative;
+}
+
+.navigationWrapper .navigationInner .navigationLogo a {
+  width: 130px;
+  height: 130px;
+  position: absolute;
+  display: block;
+  left: 0;
+  top: 0;
+}
+
+.navigationWrapper .navigationInner .navigationLogo a img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.navigationWrapper .navigationInner .navigationLinks {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  list-style: none;
+  gap: 60px;
+}
+
+.navigationWrapper .navigationInner .navigationLinks .navigationLink {
+  line-height: 48px;
+}
+
+.navigationWrapper .navigationInner .navigationLinks .navigationLink a,
+.navigationWrapper .navigationInner .navigationLinks .navigationLink span {
+  cursor: pointer;
+  display: block;
+  text-decoration: none;
+  color: var(--headings);
+  font-weight: 600;
+}
+
+.navigationWrapper .navigationInner .navigationLinks .navigationLink.navigationButton {
+  padding: 0 20px;
+  background-color: var(--primary);
+  border-radius: 10px;
 }
 
