--- a/frontend/src/theme/forms.css
+++ b/frontend/src/theme/forms.css
@@ -28,3 +28,126 @@
   cursor: not-allowed;
 }
 
+.formButton.submitting {
+  background-color: var(--success);
+  pointer-events: none;
+}
+
+.textFieldWrapper {
+  display: block;
+  position: relative;
+}
+
+.textFieldWrapper input,
+.textFieldWrapper select {
+  appearance: none;
+  display: block;
+  width: 100%;
+  height: 60px;
+  border: none;
+  border-bottom: solid 2px var(--dark_5);
+  outline: none;
+  font-size: 1.5rem;
+  padding-top: 20px;
+  color: transparent;
+}
+
+.textFieldWrapper input {
+  color: var(--dark_1);
+}
+
+.textFieldWrapper .textFieldWrapperArrow {
+  position: absolute;
+  right: 20px;
+  top: 15px;
+  width: 25px;
+  height: auto;
+}
+
+.textFieldWrapper .textFieldWrapperArrow svg {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.textFieldWrapper .textFieldWrapperArrow svg path {
+  stroke: var(--dark_2);
+}
+
+.textFieldWrapper input::placeholder {
+  color: transparent;
+}
+
+.textFieldWrapper .textFieldLabel {
+  position: absolute;
+  line-height: 30px;
+  font-size: 1.7rem;
+  color: var(--dark_2);
+  font-weight: 400;
+  top: 0;
+  left: 0;
+  will-change: font-size, line-height;
+  transition-property: font-size, line-height;
+  transition-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+  transition-duration: 200ms;
+  pointer-events: none;
+}
+
+.textFieldWrapper input:focus,
+.textFieldWrapper select:focus {
+  border-bottom-color: var(--primary);
+}
+
+.textFieldWrapper input:focus + .textFieldLabel,
+.textFieldWrapper select:focus + .textFieldLabel {
+  color: var(--primary);
+}
+
+.textFieldWrapper select.hasValue {
+  color: var(--dark_1);
+}
+
+.textFieldWrapper input:not(:placeholder-shown) + .textFieldLabel,
+.textFieldWrapper input:focus + .textFieldLabel,
+.textFieldWrapper select.hasValue + .textFieldLabel,
+.textFieldWrapper select:focus + .textFieldLabel {
+  line-height: 20px;
+  font-size: 1rem;
+}
+
+.textFieldWrapper.valid input,
+.textFieldWrapper.valid select {
+  border-bottom-color: var(--success);
+}
+
+.textFieldWrapper.invalid input,
+.textFieldWrapper.invalid select {
+  border-bottom-color: var(--error);
+}
+
+.textFieldWrapper.invalid input + .textFieldLabel,
+.textFieldWrapper.invalid select + .textFieldLabel {
+  color: var(--error);
+}
+
+.formError {
+  display: block;
+  color: var(--error);
+  line-height: 20px;
+  margin-bottom: -20px;
+  text-align: right;
+  font-size: 14px;
+}
+
+/* .textField::-moz-placeholder {
+  color: pink;
+}
+
+.textField:-ms-input-placeholder {
+  color: pink;
+}
+
+.textField:-moz-placeholder {
+  color: pink;
+} */
+
