--- a/frontend/src/pages/home/home.module.css
+++ b/frontend/src/pages/home/home.module.css
@@ -2,7 +2,19 @@
   position: relative;
   overflow: hidden;
   padding-top: 340px;
-  padding-bottom: 300px;
+  padding-bottom: 365px;
+}
+
+@media screen and (max-width: 900px) {
+  .header {
+    padding-bottom: 220px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .header {
+    padding-bottom: 150px;
+  }
 }
 
 .header img.headerBackground {
@@ -50,6 +62,18 @@
   bottom: 0;
 }
 
+@media screen and (max-width: 900px) {
+  .header .headerCircles {
+    height: 150px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .header .headerCircles {
+    height: 90px;
+  }
+}
+
 .header .headerCircles svg.headerCircle {
   width: 100%;
   height: 100%;
@@ -87,25 +111,82 @@
   padding-bottom: 140px;
 }
 
+@media screen and (max-width: 720px) {
+  .homeContentWrapper {
+    padding-bottom: 25px;
+  }
+}
+
+.homeContentWrapper::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 5px;
+  background: var(--primary);
+  position: absolute;
+  left: 0;
+  top: -2px;
+  z-index: 6;
+  opacity: 1;
+}
+
 .homeContentWrapper .homeContentInfoContainer {
   max-width: 1180px;
+  width: 90%;
   margin: 0 auto;
 }
 
 .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 140px;
   margin-bottom: 90px;
 }
 
-.homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn {
-  flex: 1;
+@media screen and (max-width: 900px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow {
+    gap: 50px;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow.homeContentInfoRowInvert {
+    gap: 50px;
+    grid-template-columns: 2fr 1fr;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow {
+    display: block;
+    padding-left: 230px;
+    position: relative;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow.homeContentInfoRowInvert {
+    padding-left: 0;
+    padding-right: 230px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow {
+    padding-left: 0;
+    margin-bottom: 45px;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow.homeContentInfoRowInvert {
+    padding-right: 0;
+  }
 }
 
 .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn h2 {
   padding-top: 70px;
+}
+
+@media screen and (max-width: 900px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn h2 {
+    padding-top: 15px;
+  }
 }
 
 .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn p {
@@ -154,6 +235,58 @@
   width: auto;
   display: block;
   margin: auto;
+  max-width: 80%;
+}
+
+@media screen and (max-width: 900px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn {
+    border-radius: 0;
+    background: none;
+    position: relative;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 50%;
+    background: linear-gradient(180deg, transparent 0%, var(--primary) 60%);
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn img {
+    height: auto;
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn {
+    position: absolute;
+    left: -150px;
+    transform: rotate(35deg);
+    width: 250px;
+    top: 20px;
+    z-index: 7;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow.homeContentInfoRowInvert .homeContentInfoColumn.homeContentInfoImageColumn {
+    transform: rotate(-35deg);
+    left: auto;
+    right: -150px;
+  }
+
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn::after {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .homeContentWrapper .homeContentInfoContainer .homeContentInfoRow .homeContentInfoColumn.homeContentInfoImageColumn {
+    display: none;
+  }
 }
 
 .homeContentWrapper .homeContentInfoBridge {
@@ -174,6 +307,18 @@
   padding-top: 150px;
   padding-bottom: 450px;
   position: relative;
+}
+
+@media screen and (max-width: 720px) {
+  .sellerCardsWrapper {
+    padding-bottom: 90px;
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .sellerCardsWrapper {
+    padding-top: 90px;
+  }
 }
 
 .sellerCardsWrapper::after {
@@ -200,16 +345,19 @@
 }
 
 .sellerCardsWrapper .sellerCardsInnerContent h1 {
+  width: 90%;
   max-width: 880px;
   margin-bottom: 20px;
 }
 
 .sellerCardsWrapper .sellerCardsInnerContent p {
+  width: 90%;
   max-width: 580px;
   margin-bottom: 20px;
 }
 
 .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList {
+  width: 90%;
   max-width: 1080px;
   margin: auto;
   padding: 0;
@@ -218,6 +366,26 @@
   grid-template-columns: repeat(6, 1fr);
   gap: 10px;
   list-style: none;
+}
+
+@media screen and (max-width: 900px) {
+  .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList {
+    align-items: stretch;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList {
+    align-items: stretch;
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList {
+    grid-template-columns: 1fr;
+  }
 }
 
 .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList .sellerCardsListItem {
@@ -240,7 +408,6 @@
 .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList .sellerCardsListItem .sellerCardsListContent h4 {
   margin: 17px 0 6px 0;
 }
-
 
 .sellerCardsWrapper .sellerCardsInnerContent .sellerCardsList .sellerCardsListItem .sellerCardsListContent span {
   font-size: 13px;
