--- a/frontend/src/theme/typography.css
+++ b/frontend/src/theme/typography.css
@@ -27,6 +27,16 @@ h2 {
   letter-spacing: -1.26px;
 }
 
+@media screen and (max-width: 450px) {
+  h1 {
+    font-size: 2.8rem;
+  }
+
+  h2 {
+    font-size: 2rem;
+  }
+}
+
 h4 {
   font-family: 'Bebas Neue', sans-serif;
   font-weight: 400;
