--- a/frontend/src/theme/forms.css
+++ b/frontend/src/theme/forms.css
@@ -62,6 +62,7 @@
   font-size: 1.5rem;
   padding-top: 20px;
   color: transparent;
+  background: var(--background);
 }
 
 .textFieldWrapper input {
